tests/baselines/reference/FunctionDeclaration1_es6.errors.txt
tests/cases/conformance/es6/functionDeclarations/FunctionDeclaration1_es6.ts(1,10): error TS9001: Generators are not currently supported.


==== tests/cases/conformance/es6/functionDeclarations/FunctionDeclaration1_es6.ts (1 errors) ====
    function * foo() {
             ~
!!! error TS9001: Generators are not currently supported.
    }